--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/logo_tap.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      description="description"
+      content="Bienvenido a mi portafolio web, estoy emocionado por la oportunidad de llevar mis habilidades en desarrollo web al siguiente nivel y contribuir a proyectos innovadores. Si buscas un desarrollador web apasionado y comprometido para tu equipo estaré encantado de discutir cómo puedo aportar a tus objetivos."
+    />
+    <meta
+      name="keywords"
+      content="Portafolio web, DiegoDiazDev, Desarrollo web"
+    />
+    <meta name="author" content="Diego Alejandro Diaz Bonilla" />
+    <meta name="copyright" content="DiegoDiazDev" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta name="robots" content="index, follow" />
     <title>Diego Dev Portfolio</title>
   </head>
   <body>
